# set(professional_cpp_SRCS
#     professional_cpp.cpp
# )

# ecm_qt_declare_logging_category(professional_cpp_SRCS
#     HEADER debug.h
#     IDENTIFIER PLUGIN_PROFESSIONAL_CPP
#     CATEGORY_NAME "kdevelop.plugins.professional_cpp"
#     DESCRIPTION "KDevelop plugin: professional_cpp"
#     EXPORT PROFESSIONAL_CPP
# )
#
# kdevplatform_add_plugin(professional_cpp
#     SOURCES ${professional_cpp_SRCS}
# )
#
# target_link_libraries(professional_cpp
#     KDev::Interfaces
# )
